# RG95-shapes-and-colors

./: .gitignore  CMakeLists.txt  README.md
shapes/: cube.cpp  cylinder.cpp  flower.cpp  heart.cpp  shapes.cpp  shapes.hpp  sphere.cpp  star.cpp  triangularPrism.cpp
src/: firstScene.cpp  firstScene.hpp  main.cpp  mainCube.cpp  mainCube.hpp  shapes.cpp  shapes.hpp  texture.cpp  texture.hpp
